[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/scripts/areas/area_checker.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[node name="AreaChecker" type="Area2D"]
collision_layer = 0
collision_mask = 2147483657
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7, 7 )
shape = SubResource( 1 )

[node name="Lifetime" type="Timer" parent="."]
process_mode = 0
wait_time = 0.05
one_shot = true
autostart = true
[connection signal="area_entered" from="." to="." method="_on_collide"]
[connection signal="body_entered" from="." to="." method="_on_collide"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_expired"]
